* Mon Jun 15 2020 Jan Fickler <jan.fickler@webfleet.com> - 8.5.1-0
- Fix regex substitution for bad path characters

* Thu Oct 31 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.5.0-0
- Allow users to knockout entries from arrays specified in Hiera
- Multiple rules added based on best practices mostly pulled from
  /usr/share/doc/auditd:
  - Audit 32 bit operations on 64 bit systems
  - Audit calls to the auditd CLI commands
  - Audit IPv4 and IPv6 inbound connections
  - Optionally audit IPv4 and IPv6 outbound connections
  - Audit suspicious applications
  - Audit systemd
  - Audit the auditd configuration space
  - Ignore time daemon logs (clutter)
  - Ignore CRYPTO_KEY_USER logs (clutter)
  - Add ability to set the backlog_wait_time
  - Set loginuid_immutable

* Thu Oct 24 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 8.5.0-0
- Set defaults for syslog parameters if auditd version is unknown.
- Added support for auditd v3.0 which is used by RedHat 8.
- A fact that determines the major version of auditd that is running on the system
  was added, auditd_major_version.  This is used in hiera.yaml hierarchy to add
  module data specific to the versions.
- Most of the changes in auditd v3.0 were related to how the plugins are handled but there
  are a few new parameters added to auditd.conf.  They were set to their
  defaults according to man of auditd.conf.
- Auditd V3.0 moved the handling of plugins into auditd from audispd.
  The following changes were made to accommodate that:
  - To make sure the parameters used to handle plugins where defined in
    one place no matter what version of auditd was used,
    they were moved to init.pp and referenced from there by the audisp manifest.
    For backwards compatibility, they remain in audisp.conf and are aliased in
    the hiera module data.
  - For backwards compatibility auditd::syslog remains defaulting to the
    value of simp_options::syslog although the two are not really the same thing.