@@ -1,3 +1,9 @@
+* Wed Jun 24 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.5.1-0
+- Added a File statement for /etc/audit/audit.rules.prev to prevent unnecessary
+  flapping
+- Ensure that the inspec tests don't run if there isn't a profile available
+- Ensure that kmod is audited in all STIG modes on EL7+
+
 * Mon Jun 15 2020 Jan Fickler <jan.fickler@webfleet.com> - 8.5.1-0
 - Fix regex substitution for bad path characters
 
